# hnefatafl

./: .gitattributes  .gitignore  .ignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  REUSE.toml  SECURITY.md  andriod-notes.md  default.nix  index.html  justfile  rust-toolchain.toml  todo.md
.cargo/: config.toml
.githooks/: post-checkout  post-commit  post-merge  pre-commit  pre-push
.github/: FUNDING.yml
.github/workflows/: CODEOWNERS  clippy.yml  fmt.yml  reuse.yml  rust.yml  tests.yml  zizmor.yml
LICENSES/: CC0-1.0.txt
assets/: hnefatafl-individual-CLA.tex
benches/: hnefatafl_rs.rs
coverage/html/: index.html
coverage/html/src/: ai.rs.html  board.rs.html  characters.rs.html  draw.rs.html  email.rs.html  game.rs.html  game_tree.rs.html  glicko.rs.html  heat_map.rs.html  index.html  lib.rs.html  locale.rs.html  message.rs.html  play.rs.html  rating.rs.html  role.rs.html  server_game.rs.html  space.rs.html  status.rs.html  tests.rs.html  time.rs.html  tournament.rs.html  tree.rs.html  utils.rs.html
coverage/html/tests/: hnefatafl_rs.rs.html  index.html
docs/: index.html
docs/src/: accounts.rs.html  ai.rs.html  board.rs.html  characters.rs.html  draw.rs.html  email.rs.html  game.rs.html  game_tree.rs.html  glicko.rs.html  heat_map.rs.html  index.html  lib.rs.html  locale.rs.html  message.rs.html  play.rs.html  rating.rs.html  role.rs.html  server_game.rs.html  space.rs.html  status.rs.html  tests.rs.html  time.rs.html  tournament.rs.html  tree.rs.html  utils.rs.html
docs/tests/: hnefatafl_rs.rs.html  index.html
examples/: hnefatafl-client.rs  taflzero.rs
html-client/: index.html
locales/: app.json  app.toml  app.yml
src/: accounts.rs  ai.rs  board.rs  characters.rs  client.rs  draw.rs  email.rs  futhorc.rs  game.rs  game_record.rs  game_tree.rs  glicko.rs  heat_map.rs  lib.rs  locale.rs  mcts.rs  message.rs  opentafl.rs  play.rs  rating.rs  role.rs  server_game.rs  smtp.rs  space.rs  status.rs  tests.rs  time.rs  tournament.rs  tree.rs  utils.rs  zobrist.rs
supply-chain/: config.toml
tests/: hnefatafl_rs.rs
website/: book.toml  replace_strings.sh  website-remote.sh  website.sh
website/src/: README.dj  README.md  SUMMARY.md  ai.md  history.md  hnefatafl.list  install.dj  install.md  packages.hnefatafl.org.asc  rules.md  tournaments.md
