[package]
name = "hnefatafl-copenhagen"
version = "4.2.2"
authors = ["David Campbell <dcampbell24@gmail.com>"]
edition = "2024"
rust-version =  "1.88"
description = "Copenhagen Hnefatafl client, engine, and server."
documentation = "https://docs.rs/hnefatafl-copenhagen/"
readme = "README.md"
homepage = "https://hnefatafl.org"
repository = "https://github.com/dcampbell24/hnefatafl"
license = "MIT OR Apache-2.0"
keywords = ["board-game", "copenhagen", "hnefatafl", "tafl"]
categories = ["game-engines", "games", "wasm"]
default-run = "hnefatafl-server-full"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
futures = "0.3"
rodio = "0.21"
webbrowser = { version = "1", features = ["hardened"] }

[target.'cfg(target_os = "android")'.dev-dependencies]
android-activity = { version = "0.6.0", features = ["native-activity"] }

[dev-dependencies.iced]
git = "https://github.com/iced-rs/iced"
features = ["smol", "wgpu", "crisp", "web-colors", "thread-pool", "linux-theme-detection"]
default-features = false

[dependencies]
anyhow = "1"
# bincode = "=2.0.0-rc.3"
# bincode_derive = "=2.0.0-rc.3"
# burn = { version = "0.16", features = ["train", "wgpu", "vision"] }
chrono = "0.4"
clap = { version ="4", features = ["derive"] }
clap_mangen = "0.2"
csv = "1"
dirs = "6"
env_logger = "0.11"
log = "0.4"
postcard = { version = "1", features = ["alloc"] }
rand = { version = "0.9", features = ["os_rng"] }
rayon = "1"
ron = { version = "0.11", features = ["integer128"] }
rustc-hash = "2"
rust-i18n = "3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

# js engine only
getrandom = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

# send-website-urls only
reqwest = { version = "0.12", features = ["blocking"], optional = true }

# server only
argon2 = { version = "0.5", optional = true }
ctrlc = { version = "3", features = ["termination"], optional = true }
lettre = { version = "0.11", optional = true }
old_rand = { package = "rand", version = "0.8", optional = true }
password-hash = { version = "0.5", optional = true }

[features]
default = ["server"]
js = ["dep:wasm-bindgen", "getrandom/wasm_js"]
server = ["dep:argon2", "dep:ctrlc", "dep:lettre", "dep:old_rand", "dep:password-hash"]

# client only
icon_2 = []

# send-website-urls only
urls = ["dep:reqwest"]

[lib]
crate-type = ["cdylib", "rlib"]
bench = false
doctest = false

[[bin]]
name = "hnefatafl-ai"
bench = false
test = false

[[example]]
name = "hnefatafl-client"

[[bin]]
name = "hnefatafl-server"
bench = false
test = false

[[bin]]
name = "hnefatafl-text-protocol"
bench = false
test = false

[[bin]]
name = "hnefatafl-server-full"
required-features = ["server"]
bench = false

[[bin]]
name = "icelandic-runic"
bench = false
test = false

[[bin]]
name = "send-website-urls"
required-features = ["urls"]
bench = false
test = false

[[bin]]
name = "replace_strings"
bench = false
test = false

[[bench]]
name = "hnefatafl_rs"
harness = false

[lints.clippy]
cargo = "deny"
complexity = "deny"
correctness = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

multiple_crate_versions = { level = "allow", priority = 1 }

[profile.release]
panic = "abort"

[profile.bench]
inherits = "release"
panic = "unwind"

[profile.profiling]
inherits = "bench"
debug = true

# To update the icon cache: rm ~/.cache/icon-cache.kcache
# Then log out and in.
[package.metadata.deb]
copyright = "2025 David Lawrence Campbell"
maintainer = "David Campbell <dcampbell24@gmail.com>"
extended-description = "The engine is similar to the Go Text Protocol."
features = ["server"]
assets = [
    ["hnefatafl-ai.1.gz", "usr/share/man/man1/", "644"],
    ["hnefatafl-client.1.gz", "usr/share/man/man1/", "644"],
    ["hnefatafl-server-full.1.gz", "usr/share/man/man1/", "644"],
    ["icons/king_16x16.png", "usr/share/icons/hicolor/16x16/apps/org.hnefatafl.hnefatafl_client.png", "644"],
    ["icons/king_22x22.png", "usr/share/icons/hicolor/22x22/apps/org.hnefatafl.hnefatafl_client.png", "644"],
    ["icons/king_24x24.png", "usr/share/icons/hicolor/24x24/apps/org.hnefatafl.hnefatafl_client.png", "644"],
    ["icons/king_32x32.png", "usr/share/icons/hicolor/32x32/apps/org.hnefatafl.hnefatafl_client.png", "644"],
    ["icons/king_42x42.png", "usr/share/icons/hicolor/42x42/apps/org.hnefatafl.hnefatafl_client.png", "644"],
    ["icons/king_64x64.png", "usr/share/icons/hicolor/64x64/apps/org.hnefatafl.hnefatafl_client.png", "644"],
    ["icons/king_128x128.png", "usr/share/icons/hicolor/128x128/apps/org.hnefatafl.hnefatafl_client.png", "644"],
    ["icons/king_256x256.png", "usr/share/icons/hicolor/256x256/apps/org.hnefatafl.hnefatafl_client.png", "644"],
    ["packages/hnefatafl-client.desktop", "usr/share/applications/", "644"],
    ["packages/hnefatafl-ai-00-attacker.service", "usr/lib/systemd/system/", "644"],
    ["packages/hnefatafl-ai-01-defender.service", "usr/lib/systemd/system/", "644"],
    ["packages/hnefatafl.service", "usr/lib/systemd/system/", "644"],
    ["target/release/examples/hnefatafl-client", "usr/games/", "755"],
    ["target/release/hnefatafl-ai", "usr/games/", "755"],
    ["target/release/hnefatafl-server-full", "usr/games/", "755"],
]
changelog = "packages/changelog"
section = "games"

[package.metadata.i18n]
default-locale = "en-US"
available-locales = ["en-US", "zh-CN", "es", "ar", "id", "pt-BR", "pt-PT", "fr", "ja", "ru", "de", "is-IS", "is-RU", "sv-SE"]
